# libcs

./: CMakeLists.txt  README.md  cs.pro  index.html  make.bat  make.sh  make_clean.sh  make_debug.sh  params.json
cmake/: FindCS.cmake  FindLOG4CXX.cmake
example/: CMakeLists.txt  example_convex.cpp  example_simple_raster.cpp  make.sh  make_debug.sh
example/analysis/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp
example/ball_knob/: CMakeLists.txt  ball_knob.cpp  ball_knob.h  main.cpp
example/convex/: CMakeLists.txt  convex.cpp  convex.h  h.off  l.off  main.cpp
example/find_path/: CMakeLists.txt  find_path.cpp  find_path.h  main.cpp
example/gearbox/: CMakeLists.txt  gearbox.cpp  gearbox.h  main.cpp
example/simple_raster/: CMakeLists.txt  main.cpp  simple_raster.cpp  simple_raster.h
examples/: CMakeLists.txt  example_analysis.cpp  example_analysis.h  example_ball_knob.cpp  example_ball_knob.h  example_convex.cpp  example_convex.h  example_find_path.cpp  example_find_path.h  example_gearbox.cpp  example_gearbox.h  example_simple_raster.cpp  example_simple_raster.h  examples.pro  main.cpp
include/cs/: Ball_3.h  Ball_3.ipp  Benchmark.h  Benchmark.ipp  Bigint.h  Bigint.ipp  Build.h  Cell_n.h  Cell_n.ipp  Config.h  Contfrac.h  Convert_polynomial.h  Convert_polynomial.ipp  Coordinate.h  Cubic.h  Cubic.ipp  Extended.h  Hom_root.h  Hom_root.ipp  Index_tree_n.h  Index_tree_n.ipp  Isolate_polynomial_roots.h  Isolate_polynomial_roots.ipp  Linear_system.h  Linear_system.ipp  Loader_scene.h  Loader_scene.ipp  Loader_sphere_tree.h  Loader_sphere_tree.ipp  Logger.h  Math_utils.h  Math_utils.ipp  Math_utils_exact.h  Math_utils_exact.ipp  Matrix_44.h  Matrix_44.ipp  Polynomial_interval.h  Polynomial_interval.ipp  Polynomial_sign_at.h  Polynomial_sign_at.ipp  (+80 more)
lib/: Ball_3.h  Benchmark.cpp  Benchmark.h  Benchmark.ipp  Bigint.ipp  Build.cpp  Build.h  Config.cpp  Contfrac.cpp  Contfrac.h  Convert_polynomial.h  Convert_polynomial.ipp  Coordinate.cpp  Coordinate.h  Cubic.h  Cubic.ipp  Hom_root.cpp  Hom_root.h  Hom_root.ipp  Index_tree_n.h  Isolate_polynomial_roots.h  Loader_scene.ipp  Loader_sphere_tree.h  Loader_sphere_tree.ipp  Math_utils.cpp  Polynomial_interval.h  Polynomial_interval.ipp  Polynomial_sign_at.h  Polynomial_sign_at.ipp  Predicate_bb_3_list_generator.h  Predicate_g_3.h  Predicate_g_3.ipp  Predicate_h_3.ipp  Predicate_list_generator.h  Predicate_s_3.h  Predicate_s_3.ipp  Predicate_tt_3_list_generator.h  Quadratic.h  Quadratic.ipp  Quartic.h  (+28 more)
src/: Benchmark.cpp  Build.cpp  Config.cpp  Contfrac.cpp  Coordinate.cpp  Hom_root.cpp  Logger.cpp  Math_utils.cpp  Math_utils_exact.cpp  Random.cpp  Scene_loader.cpp  Spin_3.cpp  Spin_cell_graph_3.cpp  Spin_inexact_kernel_3.cpp  Spin_kernel_3.cpp  Spin_qsic_trim_3.cpp  Uspensky_Hanrot.c
test/: CMakeLists.txt  main.cpp  test.pro  test_cell_perf.cpp  test_cell_perf.h  test_exact_perf.cpp  test_exact_perf.h  test_inexact_perf.cpp  test_inexact_perf.h  test_various.cpp  test_various.h
